# restaurant-finder-api

./: .env.sample  .gitignore  Dockerfile  README.md  build.sh  init-repo.sh  pyproject.toml  requirements.txt
.github/workflows/: workflow.yaml
app/: __main__.py  api.py  dto.py  helper.py  logger.py  mapper.py  metrics.py  router.py
app/error/: exception.py  handler.py
app/middleware/: cw_metric_middleware.py  rate_limit_middleware.py
app/service/: geospatial.py  llm.py
infra/: cloudwatch.tf  ec2.tf  main.tf  s3.tf  variables.tf
test/: test_geospatial.py  test_helper.py  test_llm.py  test_router.py
